draft-ietf-hybi-thewebsocketprotocol-17

--- a/draft-ietf-hybi-thewebsocketprotocol-17.html
+++ b/draft-ietf-hybi-thewebsocketprotocol-17.html
@@ -473,12 +473,12 @@
 <td class="right">A. Melnikov</td>
 </tr>
 <tr>
-<td class="left">Expires: March 30, 2012</td>
+<td class="left">Expires: April 02, 2012</td>
 <td class="right">Isode Ltd</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">September 27, 2011</td>
+<td class="right">September 30, 2011</td>
 </tr>
 
     	
@@ -486,7 +486,7 @@
   </table>
 
   <p class="title">The WebSocket protocol<br />
-  <span class="filename">draft-ietf-hybi-thewebsocketprotocol-16</span></p>
+  <span class="filename">draft-ietf-hybi-thewebsocketprotocol-17</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>The WebSocket protocol enables two-way communication between a client running untrusted code running in a controlled environment to a remote host that has opted-in to communications from that code. The security model used for this is the Origin-based security model commonly used by Web browsers.  The protocol consists of an opening handshake followed by basic message framing, layered over TCP. The goal of this technology is to provide a mechanism for browser-based applications that need two-way communication with servers that does not rely on opening multiple HTTP connections (e.g. using XMLHttpRequest or &lt;iframe&gt;s and long polling).  </p>
@@ -495,7 +495,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on March 30, 2012.</p>
+<p>This Internet-Draft will expire on April 02, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -1114,14 +1114,14 @@
 <h1 id="rfc.section.5.2">
 <a href="#rfc.section.5.2">5.2.</a> <a href="#baseframing" id="baseframing">Base Framing Protocol</a>
 </h1>
-<p id="rfc.section.5.2.p.1">This wire format for the data transfer part is described by the ABNF <a href="#RFC5234">[RFC5234]</a> given in detail in this section.  (Note that unlike in other sections of this document the ABNF in this section is operating on groups of bits. When encoded on the wire the most significant bit is the leftmost in the ABNF).  A high level overview of the framing is given in the following figure.  In a case of conflict between the figure below and the ABNF specified later in this section, the ABNF version should be considered to be more authoritative.  <br><br> </p>
+<p id="rfc.section.5.2.p.1">This wire format for the data transfer part is described by the ABNF <a href="#RFC5234">[RFC5234]</a> given in detail in this section.  (Note that unlike in other sections of this document the ABNF in this section is operating on groups of bits. The length of each group of bits is indicated in a comment. When encoded on the wire the most significant bit is the leftmost in the ABNF).  A high level overview of the framing is given in the following figure.  In a case of conflict between the figure below and the ABNF specified later in this section, the figure is authoritative.  <br><br> </p>
 <div id="#rfc.figure.19"></div>
 <pre>
    0                   1                   2                   3
    0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
   +-+-+-+-+-------+-+-------------+-------------------------------+
   |F|R|R|R| opcode|M| Payload len |    Extended payload length    |
-  |I|S|S|S|  (4)  |A|     (7)     |             (16/63)           |
+  |I|S|S|S|  (4)  |A|     (7)     |             (16/64)           |
   |N|V|V|V|       |S|             |   (if payload len==126/127)   |
   | |1|2|3|       |K|             |                               |
   +-+-+-+-+-------+-+-------------+ - - - - - - - - - - - - - - - +
@@ -1171,32 +1171,34 @@
 </dl>
 
 <p> </p>
-<p id="rfc.section.5.2.p.3">The base framing protocol is formally defined by the following ABNF <a href="#RFC5234">[RFC5234]</a>:</p>
+<p id="rfc.section.5.2.p.3">The base framing protocol is formally defined by the following ABNF <a href="#RFC5234">[RFC5234]</a>. It is important to note that the representation of this data is binary, not ASCII characters. As such, a field with a length of 1 bit that takes values %x0 / %x1 is represented as a single bit whose value is 0 or 1, not a full byte (octet) that stands for the characters "0" or "1" in the ASCII encoding. A field with a length of 4 bits with values between %x0-F again is represented by 4 bits, again NOT by an ASCII character or full byte (octet) with these values. <a href="#RFC5234">[RFC5234]</a> does not specify a character encoding - " Rules resolve into a string of terminal values, sometimes called characters.  In ABNF, a character is merely a non-negative integer. In certain contexts, a specific mapping (encoding) of values into a character set (such as ASCII) will be specified." Here, the specified encoding is a binary encoding where each terminal value is encoded in the specified number of bits, which varies for each field.  </p>
 <div id="#rfc.figure.20"></div>
 <pre>
-   ws-frame                = frame-fin
-                             frame-rsv1
-                             frame-rsv2
-                             frame-rsv3
-                             frame-opcode
-                             frame-masked
-                             frame-payload-length
-                             [ frame-masking-key ]
-                             frame-payload-data
+   ws-frame                = frame-fin           ; 1 bit in length
+                             frame-rsv1          ; 1 bit in length
+                             frame-rsv2          ; 1 bit in length
+                             frame-rsv3          ; 1 bit in length
+                             frame-opcode        ; 4 bits in length
+                             frame-masked        ; 1 bit in length
+                             frame-payload-length   ;  7 bits in length
+                             [ frame-masking-key ]  ; 16 or 64 bits in length
+                             frame-payload-data     ; n * 8 bits in length,
+                                                    ; where n &gt;= 0
 
    frame-fin               = %x0 ; more frames of this message follow
                            / %x1 ; final frame of this message
+                                 ; 1 bit in length
 
    frame-rsv1              = %x0 / %x1
-                             ; 1 bit, MUST be 0 unless negotiated
+                             ; 1 bit in length, MUST be 0 unless negotiated
                              ; otherwise
 
    frame-rsv2              = %x0 / %x1
-                             ; 1 bit, MUST be 0 unless negotiated
+                             ; 1 bit in length, MUST be 0 unless negotiated
                              ; otherwise
 
    frame-rsv3              = %x0 / %x1
-                             ; 1 bit, MUST be 0 unless negotiated
+                             ; 1 bit in length, MUST be 0 unless negotiated
                              ; otherwise
 
    frame-opcode            = frame-opcode-non-control /
@@ -1211,22 +1213,27 @@
                            / %x9 ; ping
                            / %xA ; pong
                            / %xB-F ; reserved for further control frames
+                                ; 4 bits in length
 
    frame-masked            = %x0
                           ; frame is not masked, no frame-masking-key
                            / %x1
                           ; frame is masked, frame-masking-key present
+                          ; 1 bit in length
 
    frame-payload-length    = %x00-7D
                            / %x7E frame-payload-length-16
                            / %x7F frame-payload-length-63
+                           ; 7 bits in length
 
-   frame-payload-length-16 = %x0000-FFFF
+   frame-payload-length-16 = %x0000-FFFF ; 16 bits in length
 
    frame-payload-length-63 = %x0000000000000000-7FFFFFFFFFFFFFFF
+                           ; 64 bits in length
 
    frame-masking-key       = 4( %0x00-FF )
                              ; present only if frame-masked is 1
+                             ; 32 bits in length
 
    frame-payload-data      = (frame-masked-extension-data
                               frame-masked-application-data)
@@ -1237,13 +1244,17 @@
 
    frame-masked-extension-data     = *( %x00-FF )
                            ; reserved for future extensibility
+                                   ; n*8 bits in length , where n &gt;= 0
 
    frame-masked-application-data   = *( %x00-FF )
+                                   ; n*8 bits in length, where n &gt;= 0
 
    frame-unmasked-extension-data   = *( %x00-FF )
                            ; reserved for future extensibility
+                                   ; n*8 bits in length, where n &gt;= 0
 
    frame-unmasked-application-data = *( %x00-FF )
+                                   ; n*8 bits in length, where n &gt;= 0
 </pre>
 <p></p>
 <h1 id="rfc.section.5.3">
@@ -1551,7 +1562,8 @@
       registered-token = token
       extension-param = token [ "=" (token | quoted-string) ]
           ;When using the quoted-string syntax variant, the value
-          ;after quoted-string unescaping MUST conform to the 'token' ABNF.
+          ;after quoted-string unescaping MUST conform to the
+          ;'token' ABNF.
           </pre>
 <p id="rfc.section.9.1.p.2">Note that like other HTTP header fields, this header field MAY be split or combined across multiple lines. Ergo, the following are equivalent:</p>
 <div id="#rfc.figure.23"></div>
@@ -1973,7 +1985,7 @@
  -+----------------+-----------------------------------------+-
   | 12             +                Reserved                 |
  -+----------------+-----------------------------------------+-
-  | 13             + draft-ietf-hybi-thewebsocketprotocol-13 |
+  | 13             +   RFCXXXX (RFC Editor: please update)   |
  -+----------------+-----------------------------------------+-
 </pre>
 <p id="rfc.section.11.6.p.4">IANA is asked to add initial values to the registry, with suggested numerical values as these have been used in past versions of this protocol.  </p>
@@ -2190,7 +2202,7 @@
 <tr>
 <td class="reference"><b id="I-D.ietf-websec-origin">[I-D.ietf-websec-origin]</b></td>
 <td class="top">
-<a>Barth, A</a>, "<a href="http://tools.ietf.org/html/draft-ietf-websec-origin-04">The Web Origin Concept</a>", Internet-Draft draft-ietf-websec-origin-04, August 2011.</td>
+<a>Barth, A</a>, "<a href="http://tools.ietf.org/html/draft-ietf-websec-origin-05">The Web Origin Concept</a>", Internet-Draft draft-ietf-websec-origin-05, September 2011.</td>
 </tr>
 </tbody></table>
 <h1 id="rfc.references.2">
