draft-irtf-rrg-design-goals-05

--- a/draft-irtf-rrg-design-goals-05.html
+++ b/draft-irtf-rrg-design-goals-05.html
@@ -153,10 +153,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Internet Research Task Force</td><td class="header">T. Li, Ed.</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco Systems, Inc.</td></tr>
-<tr><td class="header">Intended status: Informational</td><td class="header">November 8, 2010</td></tr>
-<tr><td class="header">Expires: May 12, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Informational</td><td class="header">December 20, 2010</td></tr>
+<tr><td class="header">Expires: June 23, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />Design Goals for Scalable Internet Routing<br />draft-irtf-rrg-design-goals-04</h1>
+<h1><br />Design Goals for Scalable Internet Routing<br />draft-irtf-rrg-design-goals-05</h1>
 
 <h3>Abstract</h3>
 
@@ -184,7 +184,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on May 12, 2011.</p>
+This Internet-Draft will expire on June 23, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -344,9 +344,12 @@ Improved routing scalability</h3>
 	  improvement to the scalability of the inter-domain routing
 	  subsystem.  It is strongly desired to make the routing subsystem
 	  scale independently from the growth of the Internet user
-	  population.  If a solution includes support for alternative
-	  routes to support faster convergence, the alternative routes
-	  should also factor into routing subsystem scalability.
+	  population.  If there is a coupling between the size of the user
+	  base and the scale of the routing subsystem, then it will be very
+	  difficult to retain any semblance of scalability.  If a solution
+	  includes support for alternative routes to support faster
+	  convergence, the alternative routes should also factor into
+	  routing subsystem scalability.
 	
 </p>
 <a name="anchor7"></a><br /><hr />
@@ -360,8 +363,12 @@ Scalable support for traffic engineering</h3>
 	  routing.  Inter-domain traffic engineering today is frequently
 	  accomplished by injecting more-specific prefixes into the global
 	  routing table, which results in a negative impact on routing
-	  scalability.  A scalable solution for inter-domain traffic
-	  engineering is strongly desired.
+	  scalability.  The additional prefixes injected to enable traffic
+	  engineering place added burden on the scalability of the routing
+	  architecture.  At the same time, the need for traffic engineering
+	  capabilities is essential to network operations.  Thus, a
+	  scalable solution for inter-domain traffic engineering is
+	  strongly desired.
 	
 </p>
 <a name="anchor8"></a><br /><hr />
@@ -385,7 +392,7 @@ Scalable support for multi-homing</h3>
 Decoupling location and identification</h3>
 
 <p>
-	  Numerous sources have noted that an IPv4 address embodies both
+	  Numerous sources have noted that an IP address embodies both
 	  host attachment point information and identification information.
 	  <a class='info' href='#IEN1'>[IEN1]<span> (</span><span class='info'>Bennett, C., Edge, S., and A. Hinchley, &ldquo;Issues in the Interconnection of Datagram Networks,&rdquo; July&nbsp;1977.</span><span>)</span></a> This overloading has caused numerous
 	  semantic collisions that have limited the flexibility of the
@@ -447,7 +454,7 @@ Scalable support for mobility</h3>
 	  as the mobile entity moves.  Mechanisms that help to provide more
 	  efficient and scalable mobility support are desired, especially
 	  when they can be coupled with security, especially privacy, and
-	  support topological changes at a high-rate.  Ideally, such
+	  support topological changes at a high rate.  Ideally, such
 	  mechanisms should completely decouple mobility from routing.
 	
 </p>
@@ -461,12 +468,13 @@ Simplified renumbering</h3>
 	  from their Internet Service Providers (ISP).  When such a site
 	  changes providers, for routing to scale, the site must renumber
 	  into a new address block assigned by its new ISP.  This can be
-	  costly, error-prone and painful.  Automated tools, once developed,
-	  are expected to provide significant help in reducing the
-	  renumbering pain.  It is not expected that renumbering will be
-	  wholly automated, as some manual reconfiguration is likely to be
-	  necessary for changing the last-mile link.  However, the overall
-	  cost of this transition should be drastically lowered.
+	  costly, error-prone and painful.  <a class='info' href='#RFC5887'>[RFC5887]<span> (</span><span class='info'>Carpenter, B., Atkinson, R., and H. Flinck, &ldquo;Renumbering Still Needs Work,&rdquo; May&nbsp;2010.</span><span>)</span></a>
+	  Automated tools, once developed, are expected to provide
+	  significant help in reducing the renumbering pain.  It is not
+	  expected that renumbering will be wholly automated, as some
+	  manual reconfiguration is likely to be necessary for changing the
+	  last-mile link.  However, the overall cost of renumbering
+	  should be drastically lowered.
 	
 </p>
 <p>
@@ -666,6 +674,8 @@ References</h3>
 <td class="author-text">Baker, F., Lear, E., and R. Droms, &ldquo;<a href="http://tools.ietf.org/html/rfc4192">Procedures for Renumbering an IPv6 Network without a Flag Day</a>,&rdquo; RFC&nbsp;4192, September&nbsp;2005 (<a href="http://www.rfc-editor.org/rfc/rfc4192.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4984">[RFC4984]</a></td>
 <td class="author-text">Meyer, D., Zhang, L., and K. Fall, &ldquo;<a href="http://tools.ietf.org/html/rfc4984">Report from the IAB Workshop on Routing and Addressing</a>,&rdquo; RFC&nbsp;4984, September&nbsp;2007 (<a href="http://www.rfc-editor.org/rfc/rfc4984.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC5887">[RFC5887]</a></td>
+<td class="author-text">Carpenter, B., Atkinson, R., and H. Flinck, &ldquo;<a href="http://tools.ietf.org/html/rfc5887">Renumbering Still Needs Work</a>,&rdquo; RFC&nbsp;5887, May&nbsp;2010 (<a href="http://www.rfc-editor.org/rfc/rfc5887.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
