draft-ietf-sip-ipv6-abnf-fix-05

--- a/draft-ietf-sip-ipv6-abnf-fix-05.html
+++ b/draft-ietf-sip-ipv6-abnf-fix-05.html
@@ -9,7 +9,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -85,11 +85,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -122,7 +122,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -155,41 +155,35 @@
 <tr><td class="header">Internet-Draft</td><td class="header">Bell Laboratories, Alcatel-Lucent</td></tr>
 <tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc3261'>3261</a> (if&nbsp;approved)</td><td class="header">B. Carpenter, Ed.</td></tr>
 <tr><td class="header">Intended status:  Standards Track</td><td class="header">Univ. of Auckland</td></tr>
-<tr><td class="header">Expires:  August 1, 2010</td><td class="header">B. Tate, Ed.</td></tr>
+<tr><td class="header">Expires:  November 4, 2010</td><td class="header">B. Tate, Ed.</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">BroadSoft</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">January 28, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">May 3, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Essential correction for IPv6 ABNF and URI comparison in RFC3261<br />DOCNAME</h1>
 
 <h3>Abstract</h3>
 
-<p>This memo corrects the Augmented Backus-Naur Form (ABNF) production
+<p>This document corrects the Augmented Backus-Naur Form (ABNF) production
 rule associated with generating IPv6 literals in RFC3261.  It also
 clarifies the rule for Uniform Resource Identifier (URI) comparison 
 when the URIs contain textual representation of IP addresses.
 </p>
 <h3>Status of this Memo</h3>
 <p>
-This Internet-Draft is submitted to IETF in full
+This Internet-Draft is submitted  in full
 conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.</p>
 <p>
 Internet-Drafts are working documents of the Internet Engineering
-Task Force (IETF), its areas, and its working groups.
-Note that other groups may also distribute working documents as
-Internet-Drafts.</p>
+Task Force (IETF).  Note that other groups may also distribute
+working documents as Internet-Drafts.  The list of current
+Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>
 Internet-Drafts are draft documents valid for a maximum of six months
 and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-The list of current Internet-Drafts can be accessed at
-<a href='http://www.ietf.org/ietf/1id-abstracts.txt'>http://www.ietf.org/ietf/1id-abstracts.txt</a>.</p>
-<p>
-The list of Internet-Draft Shadow Directories can be accessed at
-<a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
-<p>
-This Internet-Draft will expire on August 1, 2010.</p>
+This Internet-Draft will expire on November 4, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -204,7 +198,7 @@ carefully, as they describe your rights and restrictions with respect
 to this document. Code Components extracted from this document must
 include Simplified BSD License text as described in Section 4.e of
 the Trust Legal Provisions and are provided without warranty as
-described in the BSD License.</p>
+described in the Simplified BSD License.</p>
 <a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
@@ -223,17 +217,19 @@ Resolution for extra colon in IPv4-mapped IPv6 address<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#resolution-2">3.2.</a>&nbsp;
 Clarification for comparison of URIs with textual
                 representation of IP addresses<br />
-<a href="#sec-cons">4.</a>&nbsp;
+<a href="#ipv6-text">4.</a>&nbsp;
+Generating a Canonical IPv6 Textual Representation<br />
+<a href="#sec-cons">5.</a>&nbsp;
 Security Considerations<br />
-<a href="#iana-cons">5.</a>&nbsp;
+<a href="#iana-cons">6.</a>&nbsp;
 IANA Considerations<br />
-<a href="#anchor2">6.</a>&nbsp;
+<a href="#anchor2">7.</a>&nbsp;
 Acknowledgments<br />
-<a href="#rfc.references1">7.</a>&nbsp;
+<a href="#rfc.references1">8.</a>&nbsp;
 References<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references1">7.1.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references1">8.1.</a>&nbsp;
 Normative References<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references2">7.2.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references2">8.2.</a>&nbsp;
 Informative References<br />
 <a href="#rfc.authors">&#167;</a>&nbsp;
 Authors' Addresses<br />
@@ -273,10 +269,10 @@ IPv4 address.
 <p></p>
 <blockquote class="text">
 <p>Historically, the ABNF pertaining to IPv6 references in RFC3261 was 
- derived from Appendix B of RFC 2373 <a class='info' href='#RFC2373'>[6]<span> (</span><span class='info'>Hinden, R. and S. Deering, &ldquo;IP Version 6 Addressing Architecture,&rdquo; July&nbsp;1998.</span><span>)</span></a>, which 
+ derived from Appendix B of RFC 2373 <a class='info' href='#RFC2373'>[7]<span> (</span><span class='info'>Hinden, R. and S. Deering, &ldquo;IP Version 6 Addressing Architecture,&rdquo; July&nbsp;1998.</span><span>)</span></a>, which 
  was flawed to begin with (see also RFC2373 errata at 
  http://www.rfc-editor.org/cgi-bin/errataSearch.pl?rfc=2373.)  RFC2373 has 
- been subsequently obsoleted by  RFC 4291 <a class='info' href='#RFC4291'>[5]<span> (</span><span class='info'>Hinden, R. and S. Deering, &ldquo;IP Version 6 Addressing Architecture,&rdquo; February&nbsp;2006.</span><span>)</span></a>.
+ been subsequently obsoleted by  RFC 4291 <a class='info' href='#RFC4291'>[6]<span> (</span><span class='info'>Hinden, R. and S. Deering, &ldquo;IP Version 6 Addressing Architecture,&rdquo; February&nbsp;2006.</span><span>)</span></a>.
 </p>
 </blockquote>
 
@@ -329,11 +325,11 @@ Does the above rule then imply that the following URIs are equal:
 </p>
 <p>In all of the above examples, the textual representation of the 
 IPv6 address is different, but these addresses are binary equivalent
-(implementers are also urged to consult 
-<a class='info' href='#I-D.ietf-6man-text-addr-representation'>[7]<span> (</span><span class='info'>Kawamura, S. and M. Kawashima, &ldquo;A Recommendation for IPv6 Address Text Representation,&rdquo; February&nbsp;2010.</span><span>)</span></a> for recommendations
-on IPv6 address text representations.)  Section 19.1.4 of RFC3261 does 
-not provide any rule for URIs containing different textual representations 
-of IPv6 addresses that all correspond to the same binary equivalent.
+(implementers are also urged to consult <a class='info' href='#ipv6-text'>Section&nbsp;4<span> (</span><span class='info'>Generating a Canonical IPv6 Textual Representation</span><span>)</span></a> of
+this document for recommendations on IPv6 address text representations.)  
+Section 19.1.4 of RFC3261 does not provide any rule for URIs containing 
+different textual representations of IPv6 addresses that all correspond 
+to the same binary equivalent.
 
  </p>
 <blockquote class="text">
@@ -382,12 +378,12 @@ below:
                  / "25" %x30-35          ; 250-255
 
 </pre></div>
-<p>Accordingly, this memo updates RFC3261 as follows: the
+<p>Accordingly, this document updates RFC3261 as follows: the
 &lt;IPv6address&gt; and &lt;IPv4address&gt; production rules MUST
 be deleted from RFC3261 and MUST be replaced with the production rules of
 the same name in RFC3986 (and reproduced above.)  These changes, when made
 to RFC3261, will make &lt;hexpart&gt;, &lt;hexseq&gt;, and &lt;hex4&gt;
-production rules obsolete.  Thus this memo also mandates that the
+production rules obsolete.  Thus this document also mandates that the
 &lt;hexpart&gt;, &lt;hexseq&gt;, and &lt;hex4&gt; production rules MUST 
 be deleted from the ABNF of RFC3261.
 </p>
@@ -404,7 +400,7 @@ taken into consideration when comparing two URIs that contain
 varying textual representations of an IP address.
 </p>
 <p>Accordingly, the existing rule from the bulleted list in Section 19.1.4 
-of RFC3216 MUST be modified as follows:
+of RFC3261 MUST be modified as follows:
 
 
 </p>
@@ -454,23 +450,32 @@ textual representations vary:
 </p>
 </blockquote>
 
-<a name="sec-cons"></a><br /><hr />
+<a name="ipv6-text"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.4"></a><h3>4.&nbsp;
+Generating a Canonical IPv6 Textual Representation</h3>
+
+<p>Implementers SHOULD generate IPv6 text representation as
+defined in
+<a class='info' href='#I-D.ietf-6man-text-addr-representation'>[5]<span> (</span><span class='info'>Kawamura, S. and M. Kawashima, &ldquo;A Recommendation for IPv6 Address Text Representation,&rdquo; February&nbsp;2010.</span><span>)</span></a>.
+</p>
+<a name="sec-cons"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.5"></a><h3>5.&nbsp;
 Security Considerations</h3>
 
 <p>This document does not introduce any new security considerations.
 </p>
 <a name="iana-cons"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.5"></a><h3>5.&nbsp;
+<a name="rfc.section.6"></a><h3>6.&nbsp;
 IANA Considerations</h3>
 
 <p>This document does not include any IANA considerations.
 </p>
 <a name="anchor2"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.6"></a><h3>6.&nbsp;
+<a name="rfc.section.7"></a><h3>7.&nbsp;
 Acknowledgments</h3>
 
 <p>The ABNF for IPv6 was developed by Roy T. Fielding and Andrew
@@ -484,12 +489,12 @@ in Section 2.1 of <a class='info' href='#RFC5234'>[4]<span> (</span><span class=
 </p>
 <a name="rfc.references"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.7"></a><h3>7.&nbsp;
+<a name="rfc.section.8"></a><h3>8.&nbsp;
 References</h3>
 
 <a name="rfc.references1"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>7.1.&nbsp;Normative References</h3>
+<h3>8.1.&nbsp;Normative References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC3261">[1]</a></td>
 <td class="author-text">Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;<a href="http://tools.ietf.org/html/rfc3261">SIP: Session Initiation Protocol</a>,&rdquo; RFC&nbsp;3261, June&nbsp;2002 (<a href="http://www.rfc-editor.org/rfc/rfc3261.txt">TXT</a>).</td></tr>
@@ -499,18 +504,18 @@ References</h3>
 <td class="author-text"><a href="mailto:timbl@w3.org">Berners-Lee, T.</a>, <a href="mailto:fielding@gbiv.com">Fielding, R.</a>, and <a href="mailto:LMM@acm.org">L. Masinter</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc3986">Uniform Resource Identifier (URI): Generic Syntax</a>,&rdquo; STD&nbsp;66, RFC&nbsp;3986, January&nbsp;2005 (<a href="http://www.rfc-editor.org/rfc/rfc3986.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc3986.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc3986.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5234">[4]</a></td>
 <td class="author-text">Crocker, D. and P. Overell, &ldquo;<a href="http://tools.ietf.org/html/rfc5234">Augmented BNF for Syntax Specifications: ABNF</a>,&rdquo; STD&nbsp;68, RFC&nbsp;5234, January&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5234.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="I-D.ietf-6man-text-addr-representation">[5]</a></td>
+<td class="author-text">Kawamura, S. and M. Kawashima, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-6man-text-addr-representation-07.txt">A Recommendation for IPv6 Address Text Representation</a>,&rdquo; draft-ietf-6man-text-addr-representation-07 (work in progress), February&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-6man-text-addr-representation-07.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>7.2.&nbsp;Informative References</h3>
+<h3>8.2.&nbsp;Informative References</h3>
 <table width="99%" border="0">
-<tr><td class="author-text" valign="top"><a name="RFC4291">[5]</a></td>
+<tr><td class="author-text" valign="top"><a name="RFC4291">[6]</a></td>
 <td class="author-text">Hinden, R. and S. Deering, &ldquo;<a href="http://tools.ietf.org/html/rfc4291">IP Version 6 Addressing Architecture</a>,&rdquo; RFC&nbsp;4291, February&nbsp;2006 (<a href="http://www.rfc-editor.org/rfc/rfc4291.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC2373">[6]</a></td>
+<tr><td class="author-text" valign="top"><a name="RFC2373">[7]</a></td>
 <td class="author-text"><a href="mailto:hinden@iprg.nokia.com">Hinden, R.</a> and <a href="mailto:deering@cisco.com">S. Deering</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2373">IP Version 6 Addressing Architecture</a>,&rdquo; RFC&nbsp;2373, July&nbsp;1998 (<a href="http://www.rfc-editor.org/rfc/rfc2373.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2373.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2373.xml">XML</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="I-D.ietf-6man-text-addr-representation">[7]</a></td>
-<td class="author-text">Kawamura, S. and M. Kawashima, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-6man-text-addr-representation-07.txt">A Recommendation for IPv6 Address Text Representation</a>,&rdquo; draft-ietf-6man-text-addr-representation-07 (work in progress), February&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-6man-text-addr-representation-07.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.authors"></a><br /><hr />
